2005-02-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (PACKAGE_BUGREPORT): New variable.
	($(DOMAIN).pot-update): If MSGID_BUGS_ADDRESS is empty and
	PACKAGE_BUGREPORT is available, use the latter.
	Reported by Simon Josefsson <jas@extundo.com>.

2005-01-29  Bruno Haible  <bruno@clisp.org>

	* vi.po: New file, from Clytie Siddall <clytie@riverland.net.au>.
	* LINGUAS: Add vi.

2005-01-20  Bruno Haible  <bruno@clisp.org>

	* ru.po: Update from Oleg S. Tihonov <ost@tatnipi.ru>.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* de.po: Update from Karl Eichwalder <ke@suse.de>.
	* id.po: Update from Tedi Heriyanto <tedi_h@gmx.net>.
	* uk.po: Update from Maxim V. Dziumanenko <mvd@mylinux.com.ua>.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* nl.po: Update from Elros Cyriatan <cyriatan@fastmail.fm>.

2004-01-16  Bruno Haible  <bruno@clisp.org>

	Create en@quot.po when it doesn't exist.
	* Makefile.in.in (.SUFFIXES): Add .po-create.
	($(POFILES)): Invoke .po-create target when the PO file does not exist.
	(.nop.po-create): New rule.
	* Rules-quot (en@quot.po-create, en@boldquot.po-create): New rules.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* fi.po: Update from Sami J. Laine <sami.laine@iki.fi>.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* es.po: Update from Max de Mendizábal <max@upn.mx>.
	* sk.po: Update from Marcel Telka <marcel@telka.sk>.

2003-11-24  Bruno Haible  <bruno@clisp.org>

	* ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
	* ro.po: New file, from Eugen Hoanca <eugenh@urban-grafx.ro>.
	* sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.
	* tr.po: Update from Nilgün Belma Bugüner <nilgun@superonline.com>.
	* LINGUAS: Add ro.
