@@ -1,2 +1,2 @@
 # Set of available languages.
-be ca cs da de el en@quot en@boldquot es et fi fr gl id it ja ko nl nn no pl pt pt_BR ro ru sk sl sr sv tr uk vi zh_CN zh_TW
+be ca cs da de el en@quot en@boldquot es et fi fr ga gl id it ja ko nl nn no pl pt pt_BR ro ru sk sl sr sv tr uk vi zh_CN zh_TW
