@@ -44,6 +44,7 @@ EXAMPLESFILES = \
   hello-c/po/el.po \
   hello-c/po/es.po \
   hello-c/po/fr.po \
+  hello-c/po/ga.po \
   hello-c/po/ja.po \
   hello-c/po/nl.po \
   hello-c/po/pl.po \
@@ -75,6 +76,7 @@ EXAMPLESFILES = \
   hello-c-gnome/po/el.po \
   hello-c-gnome/po/es.po \
   hello-c-gnome/po/fr.po \
+  hello-c-gnome/po/ga.po \
   hello-c-gnome/po/ja.po \
   hello-c-gnome/po/nl.po \
   hello-c-gnome/po/pl.po \
@@ -103,6 +105,7 @@ EXAMPLESFILES = \
   hello-c++/po/el.po \
   hello-c++/po/es.po \
   hello-c++/po/fr.po \
+  hello-c++/po/ga.po \
   hello-c++/po/ja.po \
   hello-c++/po/nl.po \
   hello-c++/po/pl.po \
@@ -132,6 +135,7 @@ EXAMPLESFILES = \
   hello-c++-qt/po/el.po \
   hello-c++-qt/po/es.po \
   hello-c++-qt/po/fr.po \
+  hello-c++-qt/po/ga.po \
   hello-c++-qt/po/ja.po \
   hello-c++-qt/po/nl.po \
   hello-c++-qt/po/pl.po \
@@ -187,6 +191,7 @@ EXAMPLESFILES = \
   hello-c++-kde/po/el.po \
   hello-c++-kde/po/es.po \
   hello-c++-kde/po/fr.po \
+  hello-c++-kde/po/ga.po \
   hello-c++-kde/po/ja.po \
   hello-c++-kde/po/nl.po \
   hello-c++-kde/po/pl.po \
@@ -220,6 +225,7 @@ EXAMPLESFILES = \
   hello-c++-gnome/po/el.po \
   hello-c++-gnome/po/es.po \
   hello-c++-gnome/po/fr.po \
+  hello-c++-gnome/po/ga.po \
   hello-c++-gnome/po/ja.po \
   hello-c++-gnome/po/nl.po \
   hello-c++-gnome/po/pl.po \
@@ -248,6 +254,7 @@ EXAMPLESFILES = \
   hello-objc/po/el.po \
   hello-objc/po/es.po \
   hello-objc/po/fr.po \
+  hello-objc/po/ga.po \
   hello-objc/po/ja.po \
   hello-objc/po/nl.po \
   hello-objc/po/pl.po \
@@ -279,6 +286,7 @@ EXAMPLESFILES = \
   hello-objc-gnustep/po/el.po \
   hello-objc-gnustep/po/es.po \
   hello-objc-gnustep/po/fr.po \
+  hello-objc-gnustep/po/ga.po \
   hello-objc-gnustep/po/ja.po \
   hello-objc-gnustep/po/nl.po \
   hello-objc-gnustep/po/pl.po \
@@ -310,6 +318,7 @@ EXAMPLESFILES = \
   hello-objc-gnome/po/el.po \
   hello-objc-gnome/po/es.po \
   hello-objc-gnome/po/fr.po \
+  hello-objc-gnome/po/ga.po \
   hello-objc-gnome/po/ja.po \
   hello-objc-gnome/po/nl.po \
   hello-objc-gnome/po/pl.po \
@@ -337,6 +346,7 @@ EXAMPLESFILES = \
   hello-sh/po/el.po \
   hello-sh/po/es.po \
   hello-sh/po/fr.po \
+  hello-sh/po/ga.po \
   hello-sh/po/ja.po \
   hello-sh/po/nl.po \
   hello-sh/po/pl.po \
@@ -364,6 +374,7 @@ EXAMPLESFILES = \
   hello-python/po/el.po \
   hello-python/po/es.po \
   hello-python/po/fr.po \
+  hello-python/po/ga.po \
   hello-python/po/ja.po \
   hello-python/po/nl.po \
   hello-python/po/pl.po \
@@ -391,6 +402,7 @@ EXAMPLESFILES = \
   hello-clisp/po/el.po \
   hello-clisp/po/es.po \
   hello-clisp/po/fr.po \
+  hello-clisp/po/ga.po \
   hello-clisp/po/ja.po \
   hello-clisp/po/nl.po \
   hello-clisp/po/pl.po \
@@ -418,6 +430,7 @@ EXAMPLESFILES = \
   hello-librep/po/el.po \
   hello-librep/po/es.po \
   hello-librep/po/fr.po \
+  hello-librep/po/ga.po \
   hello-librep/po/ja.po \
   hello-librep/po/nl.po \
   hello-librep/po/pl.po \
@@ -445,6 +458,7 @@ EXAMPLESFILES = \
   hello-guile/po/el.po \
   hello-guile/po/es.po \
   hello-guile/po/fr.po \
+  hello-guile/po/ga.po \
   hello-guile/po/ja.po \
   hello-guile/po/nl.po \
   hello-guile/po/pl.po \
@@ -472,6 +486,7 @@ EXAMPLESFILES = \
   hello-smalltalk/po/el.po \
   hello-smalltalk/po/es.po \
   hello-smalltalk/po/fr.po \
+  hello-smalltalk/po/ga.po \
   hello-smalltalk/po/ja.po \
   hello-smalltalk/po/nl.po \
   hello-smalltalk/po/pl.po \
@@ -499,6 +514,7 @@ EXAMPLESFILES = \
   hello-java/po/el.po \
   hello-java/po/es.po \
   hello-java/po/fr.po \
+  hello-java/po/ga.po \
   hello-java/po/ja.po \
   hello-java/po/nl.po \
   hello-java/po/pl.po \
@@ -529,6 +545,7 @@ EXAMPLESFILES = \
   hello-java-awt/po/el.po \
   hello-java-awt/po/es.po \
   hello-java-awt/po/fr.po \
+  hello-java-awt/po/ga.po \
   hello-java-awt/po/ja.po \
   hello-java-awt/po/nl.po \
   hello-java-awt/po/pl.po \
@@ -559,6 +576,7 @@ EXAMPLESFILES = \
   hello-java-swing/po/el.po \
   hello-java-swing/po/es.po \
   hello-java-swing/po/fr.po \
+  hello-java-swing/po/ga.po \
   hello-java-swing/po/ja.po \
   hello-java-swing/po/nl.po \
   hello-java-swing/po/pl.po \
@@ -586,6 +604,7 @@ EXAMPLESFILES = \
   hello-csharp/po/el.po \
   hello-csharp/po/es.po \
   hello-csharp/po/fr.po \
+  hello-csharp/po/ga.po \
   hello-csharp/po/ja.po \
   hello-csharp/po/nl.po \
   hello-csharp/po/pl.po \
@@ -614,6 +633,7 @@ EXAMPLESFILES = \
   hello-csharp-forms/po/el.po \
   hello-csharp-forms/po/es.po \
   hello-csharp-forms/po/fr.po \
+  hello-csharp-forms/po/ga.po \
   hello-csharp-forms/po/ja.po \
   hello-csharp-forms/po/nl.po \
   hello-csharp-forms/po/pl.po \
@@ -641,6 +661,7 @@ EXAMPLESFILES = \
   hello-gawk/po/el.po \
   hello-gawk/po/es.po \
   hello-gawk/po/fr.po \
+  hello-gawk/po/ga.po \
   hello-gawk/po/ja.po \
   hello-gawk/po/nl.po \
   hello-gawk/po/pl.po \
@@ -669,6 +690,7 @@ EXAMPLESFILES = \
   hello-pascal/po/el.po \
   hello-pascal/po/es.po \
   hello-pascal/po/fr.po \
+  hello-pascal/po/ga.po \
   hello-pascal/po/ja.po \
   hello-pascal/po/nl.po \
   hello-pascal/po/pl.po \
@@ -696,6 +718,7 @@ EXAMPLESFILES = \
   hello-ycp/po/el.po \
   hello-ycp/po/es.po \
   hello-ycp/po/fr.po \
+  hello-ycp/po/ga.po \
   hello-ycp/po/ja.po \
   hello-ycp/po/nl.po \
   hello-ycp/po/pl.po \
@@ -723,6 +746,7 @@ EXAMPLESFILES = \
   hello-tcl/po/el.po \
   hello-tcl/po/es.po \
   hello-tcl/po/fr.po \
+  hello-tcl/po/ga.po \
   hello-tcl/po/ja.po \
   hello-tcl/po/nl.po \
   hello-tcl/po/pl.po \
@@ -750,6 +774,7 @@ EXAMPLESFILES = \
   hello-tcl-tk/po/el.po \
   hello-tcl-tk/po/es.po \
   hello-tcl-tk/po/fr.po \
+  hello-tcl-tk/po/ga.po \
   hello-tcl-tk/po/ja.po \
   hello-tcl-tk/po/nl.po \
   hello-tcl-tk/po/pl.po \
@@ -778,6 +803,7 @@ EXAMPLESFILES = \
   hello-perl/po/el.po \
   hello-perl/po/es.po \
   hello-perl/po/fr.po \
+  hello-perl/po/ga.po \
   hello-perl/po/ja.po \
   hello-perl/po/nl.po \
   hello-perl/po/pl.po \
@@ -806,6 +832,7 @@ EXAMPLESFILES = \
   hello-php/po/el.po \
   hello-php/po/es.po \
   hello-php/po/fr.po \
+  hello-php/po/ga.po \
   hello-php/po/ja.po \
   hello-php/po/nl.po \
   hello-php/po/pl.po \
