@@ -3,4 +3,4 @@
 # This file is in the public domain.
 #
 # Set of available languages.
-af ca de el es fr ja nl pl ro ru sk sr sv tr uk zh_CN
+af ca de el es fr ga ja nl pl ro ru sk sr sv tr uk zh_CN
